--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,5 +1,8 @@
 ---
 collections:
+- name: community.general
+  version: ">=6.4.0" # Version range identifiers (default: ``*``)
+  source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
 - name: infra.leapp
   version: "1.3.1" # Version range identifiers (default: ``*``)
   source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
