--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -1,5 +1,9 @@
 ---
 collections:
+# Required for leapp-post-upgrade-crypto | Include rhel_system_roles.crypto_policies role
+- name: fedora.linux_system_roles
+  version: ">=1.21.0" # Version range identifiers (default: ``*``)
+  source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
 - name: community.general
   version: ">=6.4.0" # Version range identifiers (default: ``*``)
   source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
