--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -10,4 +10,8 @@ collections:
 - name: infra.leapp
   version: "1.3.1" # Version range identifiers (default: ``*``)
   source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
+# Required for bigboot /boot resizing
+- name: infra.lvm_snapshots
+  version: "2.1.0" # Version range identifiers (default: ``*``)
+  source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
 ...
