Add ansible.posix to support bigboot

--- a/collections/requirements.yml
+++ b/collections/requirements.yml
@@ -14,4 +14,8 @@ collections:
 - name: infra.lvm_snapshots
   version: "2.1.0" # Version range identifiers (default: ``*``)
   source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
+# Required for bigboot /boot resizing to acquire size infra.lvm_snapshots
+- name: ansible.posix
+  version: ">=1.5.1" # Version range identifiers (default: ``*``)
+  source: https://galaxy.ansible.com # The Galaxy URL to pull the collection from (default: ``--api-server`` from cmdline)
 ...
