Increase root file descriptors

--- a/remediate_rhel8.yml
+++ b/remediate_rhel8.yml
@@ -22,6 +22,15 @@
   notify:
     - Restart firewalld
 
+# https://access.redhat.com/discussions/7084336
+# https://github.com/redhat-cop/infra.leapp/issues/218
+# Remove when new version of leapp collection is published
+- name: Increase root file descriptors to allow leapp to run
+  ansible.builtin.lineinfile:
+    path: "/root/.bashrc"
+    line: "ulimit -u 16384"
+    state: present
+
 - name: Configure sshd
   ansible.builtin.lineinfile:
     path: "/etc/ssh/sshd_config"
