--- a/in-place-upgrade.yml
+++ b/in-place-upgrade.yml
@@ -5,6 +5,17 @@
   become: true
   force_handlers: true
   tasks:
+  - name: Disable rhel-7-server-rpms if skipping latest 7.9 release
+    ansible.builtin.shell: |
+      set -o pipefail
+      subscription-manager repos --disable rhel-7-server-rpms
+    args:
+      executable: /bin/bash
+    when:
+      - skip_latest_rhel7 is defined
+      - skip_latest_rhel7 == 'yes'
+      - ansible_distribution_major_version|int == 7
+
   - name: Perform OS upgrade using leapp.upgrade
     ansible.builtin.import_role:
        name: infra.leapp.upgrade
