Enable rhel-7-server-extras-rpms as part of IPU on RHEL 7

--- a/in-place-upgrade.yml
+++ b/in-place-upgrade.yml
@@ -9,6 +9,7 @@
     ansible.builtin.shell: |
       set -o pipefail
       subscription-manager repos --disable *
+      subscription-manager repos --enable rhel-7-server-extras-rpms
     args:
       executable: /bin/bash
     when:
