--- a/remediate.yml
+++ b/remediate.yml
@@ -6,6 +6,18 @@
   become: true
   force_handlers: true
   tasks:
+    - name: Show current and target RHEL releases
+      ansible.builtin.debug:
+        msg:
+          - "Current version of RHEL is {{ ansible_distribution_major_version }}"
+          - "Target version of RHEL is {{ ipu_target | default('Not defined') }}"
+
+    - name: If already at target major release exit this playbook
+      ansible.builtin.meta: end_play
+      when:
+        - ipu_target is defined
+        - ansible_distribution_major_version | int == ipu_target | int
+
     - name: "Remediate rhel7 systems"
       when: ansible_distribution_major_version | int == 7
       ansible.builtin.import_tasks: remediate_rhel7.yml
