--- a/in-place-upgrade.yml
+++ b/in-place-upgrade.yml
@@ -5,25 +5,31 @@
   become: true
   force_handlers: true
   tasks:
-  - name: Disable all repos if skipping latest 7.9 release
-    ansible.builtin.shell: |
-      set -o pipefail
-      subscription-manager repos --disable \*
-      subscription-manager repos --enable rhel-7-server-extras-rpms
-    args:
-      executable: /bin/bash
-    when:
-      - skip_latest_rhel7 is defined
-      - skip_latest_rhel7 == 'yes'
-      - ansible_distribution_major_version | int == 7
+    - name: Show current and target RHEL releases
+      ansible.builtin.debug:
+        msg:
+          - "Current version of RHEL is {{ ansible_distribution_major_version }}"
+          - "Target version of RHEL is {{ ipu_target | default('Not defined') }}"
 
-  - name: If already at target major release exit this playbook
-    ansible.builtin.meta: end_play
-    when:
-      - ipu_target is defined
-      - ansible_distribution_major_version | int == ipu_target | int
+    - name: If already at target major release exit this playbook
+      ansible.builtin.meta: end_play
+      when:
+        - ipu_target is defined
+        - ansible_distribution_major_version | int == ipu_target | int
 
-  - name: Perform OS upgrade using leapp.upgrade
-    ansible.builtin.import_role:
-      name: infra.leapp.upgrade
+    - name: Disable all repos if skipping latest 7.9 release
+      ansible.builtin.shell: |
+        set -o pipefail
+        subscription-manager repos --disable \*
+        subscription-manager repos --enable rhel-7-server-extras-rpms
+      args:
+        executable: /bin/bash
+      when:
+        - skip_latest_rhel7 is defined
+        - skip_latest_rhel7 == 'yes'
+        - ansible_distribution_major_version | int == 7
+
+    - name: Perform OS upgrade using leapp.upgrade
+      ansible.builtin.import_role:
+        name: infra.leapp.upgrade
 ...
