--- a/in-place-upgrade.yml
+++ b/in-place-upgrade.yml
@@ -17,6 +17,18 @@
         - ipu_target is defined
         - ansible_distribution_major_version | int == ipu_target | int
 
+    - name: Disable all repos if skipping latest 6.10 release
+      ansible.builtin.shell: |
+        set -o pipefail
+        subscription-manager repos --disable \*
+        subscription-manager repos --enable rhel-6-server-extras-rpms
+      args:
+        executable: /bin/bash
+      when:
+        - skip_latest_rhel7 is defined
+        - skip_latest_rhel7 == 'yes'
+        - ansible_distribution_major_version | int == 6
+
     - name: Disable all repos if skipping latest 7.9 release
       ansible.builtin.shell: |
         set -o pipefail
