--- a/vars/RHEL-6.yaml
+++ b/vars/RHEL-6.yaml
@@ -1,2 +1,3 @@
 ---
+rhel_7_network_install_repo_url: http://satellite.london.example.com/pulp/content/Example_Organization/Library/content/dist/rhel/server/7/7.9/x86_64/kickstart/
 ...
