--- a/in-place-upgrade.yml
+++ b/in-place-upgrade.yml
@@ -26,29 +26,22 @@
           paths:
             - 'vars'
 
-    - name: Disable all repos if skipping latest 6.10 release
+    # In theory, we can go from RHEL 7.6 to RHEL 8.10
+    # or RHEL 6.6 to RHEL 7.9.  The leapp collection performs
+    # a yum update before the upgrade and needs to have at least
+    # one repository active. For now, we will enable the extras
+    # repo.
+    - name: Disable all repos if skipping latest updates on current platform
       ansible.builtin.shell: |
         set -o pipefail
         subscription-manager repos --disable \*
-        subscription-manager repos --enable rhel-6-server-extras-rpms
+        subscription-manager repos --enable rhel-{{ ansible_distribution_major_version }}-server-extras-rpms
       args:
         executable: /bin/bash
       when:
-        - skip_latest_rhel7 is defined
-        - skip_latest_rhel7 == 'yes'
-        - ansible_distribution_major_version | int == 6
-
-    - name: Disable all repos if skipping latest 7.9 release
-      ansible.builtin.shell: |
-        set -o pipefail
-        subscription-manager repos --disable \*
-        subscription-manager repos --enable rhel-7-server-extras-rpms
-      args:
-        executable: /bin/bash
-      when:
-        - skip_latest_rhel7 is defined
-        - skip_latest_rhel7 == 'yes'
-        - ansible_distribution_major_version | int == 7
+        - skip_latest_minor_updates is defined
+        - skip_latest_minor_updates == 'yes'
+        - ansible_distribution_major_version | int == 6 or ansible_distribution_major_version | int == 7
 
     - name: Perform OS upgrade using leapp.upgrade
       ansible.builtin.import_role:
